--- a/Admin_Portal/Views/Shared/_Layout.cshtml
+++ b/Admin_Portal/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
 
-                    @if ((User as Admin_Portal.Data.User) != null && (User as Admin_Portal.Data.User).IsInRole("Admin"))
+                    @if ((User as Admin_Portal.Data.Admin) != null && (User as Admin_Portal.Data.Admin).IsInRole("Admin"))
                     {
                         <ul class="nav navbar-nav">
                             <li class="dropdown">
@@ -42,7 +42,7 @@
                     {
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello, @((User as Admin_Portal.Data.User).User_Type) <span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello, @((User as Admin_Portal.Data.Admin).Admin_Type) <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li role="separator" class="divider"></li>
                                     <li>@Html.ActionLink("Sign Out", "SignOut", "Login")</li>
