--- a/Admin_Portal/Views/Admins/Create.cshtml
+++ b/Admin_Portal/Views/Admins/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Admin_Portal.Data.User
+﻿@model Admin_Portal.Data.Admin
 
 @{
     ViewBag.Title = "Create";
@@ -14,7 +14,7 @@
     }
 </style>
 
-<h2>Create New User</h2>
+<h2>Create New Admin</h2>
 
 <div class="white">
 @using (Html.BeginForm()) 
@@ -22,54 +22,15 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>User</h4>
+    <h4>Admin</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.Label("First Name", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.First_Name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.First_Name, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.Label("Username", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.UID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.UID, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.Label("Last Name", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Last_Name, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Last_Name, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
     <div class="form-group">
         @Html.Label("Email Address", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.Label("Expiration Date", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Exp_Date, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Exp_Date, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.Label("Birth Date", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Birth_Date, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Birth_Date, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -82,18 +43,10 @@
     </div>
 
     <div class="form-group">
-        @Html.Label("User Type", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Admin Type", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.User_Type, Model.User_Type, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.User_Type, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.Label("Role", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.Role, Model.Role, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Admin_Type, Model.Admin_Type, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Admin_Type, "", new { @class = "text-danger" })
         </div>
     </div>
 
