--- a/Admin_Portal/Views/Shared/_Layout.cshtml
+++ b/Admin_Portal/Views/Shared/_Layout.cshtml
@@ -21,19 +21,20 @@
                 </div>
                 <div class="navbar-collapse collapse">
 
-                    @if ((User as Admin_Portal.Data.Admin) != null && (User as Admin_Portal.Data.Admin).IsInRole("Admin"))
+                    @if ((User as Admin_Portal.Data.Admin) != null && (User as Admin_Portal.Data.Admin).IsInRole("Super Admin"))
                     {
                         <ul class="nav navbar-nav">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Users <span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Admins <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Users", "Index", "Users")</li>
+                                    <li>@Html.ActionLink("Create Admin", "Create", "Admins")</li>
+                                    <li>@Html.ActionLink("Edit Admin", "Edit", "Admins")</li>
                                 </ul>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Items <span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Links <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Manage Links", "Index", "ManageLinks")</li>
+                                    <li>@Html.ActionLink("Manage Links", "Index", "Manage Links")</li>
                                 </ul>
                             </li>
                         </ul>
