--- a/Admin_Portal/Views/Shared/_Layout.cshtml
+++ b/Admin_Portal/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                                 <ul class="dropdown-menu">
                                     <li>@Html.ActionLink("Create Link", "Create", "Links")</li>
                                     <li>@Html.ActionLink("Links List", "Index", "Links")</li>
+                                    <li>@Html.ActionLink("Redirects", "Redirects", "Links")</li>
                                 </ul>
                             </li>
                         </ul>
