Improved Edit Functionality

--- a/Admin_Portal/Views/Links/Redirect.cshtml
+++ b/Admin_Portal/Views/Links/Redirect.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Admin_Portal.Data.Link>
 
 @{
-    ViewBag.Title = "Redirects";
+    ViewBag.Title = "Redirect";
 }
 
 <style type="text/css">
@@ -36,7 +36,7 @@
 
             @foreach (var item in Model)
             {
-                if()
+                
                 <tr class="white">
                     <td>
                         @Html.DisplayFor(modelItem => item.Link_Name)
