--- a/Admin_Portal/Views/Links/Redirect.cshtml
+++ b/Admin_Portal/Views/Links/Redirect.cshtml
@@ -45,7 +45,7 @@
                         @Html.DisplayFor(modelItem => item.Link_Type)
                     </th>
                     <td>
-                        @Html.ActionLink("Redirect", "Redirects", "Links", new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Redirect", "Index", "Login", new { @class = "btn btn-primary" })
                     </td>
                 </tr>
             }
