--- a/Admin_Portal/Views/Admins/Edit.cshtml
+++ b/Admin_Portal/Views/Admins/Edit.cshtml
@@ -24,7 +24,7 @@
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Email)
+        @Html.HiddenFor(model => model.AdminID)
         @Html.HiddenFor(model => model.Password)
 
         <div class="form-group">
