--- a/Admin_Portal/Views/Links/Edit.cshtml
+++ b/Admin_Portal/Views/Links/Edit.cshtml
@@ -24,6 +24,7 @@
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.LinkID)
 
         <div class="form-group">
             @Html.Label("Link Name", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -37,7 +38,6 @@
             @Html.Label("Link Type", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Link_Type, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Link_Type, "", new { @class = "text-danger" })
                 @Html.ValidationMessageFor(model => model.Link_Type, "", new { @class = "text-danger" })
             </div>
         </div>
