--- a/Admin_Portal/Views/Shared/_Layout.cshtml
+++ b/Admin_Portal/Views/Shared/_Layout.cshtml
@@ -21,35 +21,38 @@
                 </div>
                 <div class="navbar-collapse collapse">
 
-                    @if ((User as Admin_Portal.Data.Admin) != null && (User as Admin_Portal.Data.Admin).IsInRole("Super"))
+                    @if ((User as Admin_Portal.Data.Admin) != null)
                     {
+                        if ((User as Admin_Portal.Data.Admin).IsInRole("Super"))
+                        {
+                            <ul class="nav navbar-nav">
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Admins <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li>@Html.ActionLink("Create Admin", "Create", "Admins")</li>
+                                        <li>@Html.ActionLink("Admin List", "Index", "Admins")</li>
+                                    </ul>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Links <span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li>@Html.ActionLink("Create Link", "Create", "Links")</li>
+                                        <li>@Html.ActionLink("Links List", "Index", "Links")</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        }
                         <ul class="nav navbar-nav">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Admins <span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">View Links <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Create Admin", "Create", "Admins")</li>
-                                    <li>@Html.ActionLink("Admin List", "Index", "Admins")</li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Links <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Create Link", "Create", "Links")</li>
-                                    <li>@Html.ActionLink("Links List", "Index", "Links")</li>
+                                    <li>@Html.ActionLink("Outside Links", "linkAccess", "Links")</li>
                                 </ul>
                             </li>
                         </ul>
                     }
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <ul class="nav navbar-nav">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">View Links <span class="caret"></span></a>
-                                <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Redirects", "Redirect", "Links")</li>
-                                </ul>
-                            </li>
-                        </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hello, @((User as Admin_Portal.Data.Admin).Admin_Type) Admin<span class="caret"></span></a>
@@ -63,7 +66,14 @@
                     else
                     {
                         <ul class="nav navbar-nav navbar-right">
-                            <li>@Html.ActionLink("Redirects", "Redirect", "Links")</li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sign In<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li role="separator" class="divider"></li>
+                                    <li>@Html.ActionLink("Sign In", "Index", "Login")</li>
+                                    <li>@Html.ActionLink("Sign Up", "Signup", "Admins")</li>
+                                </ul>
+                            </li>
                         </ul>
                     }
                 </div>
