--- a/Admin_Portal/Views/Admins/Signup.cshtml
+++ b/Admin_Portal/Views/Admins/Signup.cshtml
@@ -51,7 +51,7 @@
 }
 </div>
 <div>
-    @Html.ActionLink("Back to Home", "Index", null, new { @class = "btn btn-success" })
+    @Html.ActionLink("Back to Home", "Index", "Home", new { @class = "btn btn-success" })
 </div>
 
 @section Scripts {
